fix HeaderResponsive visible

--- a/src/components/HeaderResponsive/HeaderResponsive.module.sass
+++ b/src/components/HeaderResponsive/HeaderResponsive.module.sass
@@ -3,6 +3,7 @@
   right: 0
   top: 0
   z-index: 100
+  display: none
 .bg
   width: 100vw
   height: 100vh
@@ -105,3 +106,7 @@
 
 .active
   color: #59F881
+
+@media (max-width: 976px)
+  .HeaderResponsive
+    display: block
